Closed
Bug 1264473
Opened 9 years ago
Closed 9 years ago
spike in nsIPresShell::AddRefreshObserverInternal in 2016-04-13 nightly
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| firefox48 | --- | fixed |
People
(Reporter: dbaron, Assigned: surkov)
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
|
3.11 KB,
patch
|
yzen
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-54a38e71-816a-410b-a816-839d02160413.
=============================================================
This is similar to bug 1257669 but it is a new spike.
There was a large spike in crashes in nsIPresShell::AddRefreshObserverInternal called from mozilla::a11y::NotificationController::ScheduleProcessing() in the 2016-04-13 nightly, spread across a bunch of users.
| Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8741189 -
Flags: review?(yzenevich)
Updated•9 years ago
|
Attachment #8741189 -
Flags: review?(yzenevich) → review+
| Assignee | ||
Comment 2•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/a29c9be8af13c01e80c8bf936289fc167d4ce90c
Bug 1264473 - do not schedule child document rebuinding during main document shutdown, r=yzen
Updated•9 years ago
|
Assignee: nobody → surkov.alexander
Comment 3•9 years ago
|
||
Is this likely to help with bug 1257669?
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in
before you can comment on or make changes to this bug.
Description
•