Bug 1264473 - do not schedule child document rebuinding during main document shutdown, r=yzen